--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-classnames": "^0.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.40",
-    "prettier": "^3.3.3",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.7"
